--- a/adapter/Cargo.toml
+++ b/adapter/Cargo.toml
@@ -5,5 +5,9 @@ edition = "2018"
 publish = false
 
 [dependencies]
+# Workspace dependencies
 application = "0.0.0"
 domain = "0.0.0"
+
+# External dependencies
+thiserror = "1"
