Improve presenter implementation

--- a/adapter/Cargo.toml
+++ b/adapter/Cargo.toml
@@ -10,4 +10,5 @@ application = "0.0.0"
 domain = "0.0.0"
 
 # External dependencies
+serde = { version = "1", features = ["derive"] }
 thiserror = "1"
