--- a/infrastructure/Cargo.toml
+++ b/infrastructure/Cargo.toml
@@ -16,3 +16,10 @@ entity = "*"
 jfs = "*"
 serde = { version = "1", features = ["derive"] }
 structopt = { version = "0.3", default-features = false }
+tokio = { version = "1", features = ["full"] }
+warp = "*"
+
+[dev-dependencies]
+anyhow = "*"
+hyper = "*"
+serde_json = "1"
