--- a/infrastructure/Cargo.toml
+++ b/infrastructure/Cargo.toml
@@ -13,6 +13,8 @@ domain = "*"
 entity = "*"
 
 # External dependencies
+pretty_env_logger = "*"
+log = "*"
 jfs = "*"
 serde = { version = "1", features = ["derive"] }
 structopt = { version = "0.3", default-features = false }
