--- a/infrastructure/Cargo.toml
+++ b/infrastructure/Cargo.toml
@@ -7,10 +7,10 @@ publish = false
 [dependencies]
 
 # Workspace dependencies
-adapter = "*"
-application = "*"
-domain = "*"
-entity = "*"
+adapter = "0.0.0"
+application = "0.0.0"
+domain = "0.0.0"
+entity = "0.0.0"
 
 # External dependencies
 pretty_env_logger = "*"
