--- a/adapter/Cargo.toml
+++ b/adapter/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 # Workspace dependencies
 application = "0.0.0"
 domain = "0.0.0"
+json-boundary = { version = "0.0.0", features = ["conversions"] }
 
 # External dependencies
 http = "*"
