--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ members = [
   "adapter/json-boundary",
   "application",
   "domain",
-  "infrastructure"
+  "infrastructure",
+  "infrastructure/db"
 ]
 exclude = [ "webapp" ]
 
@@ -21,6 +22,7 @@ infrastructure = "0.0.0"
 [patch.crates-io]
 adapter = { path = "adapter" }
 application = { path = "application" }
+db = { path = "infrastructure/db" }
 domain = { path = "domain" }
 infrastructure = { path = "infrastructure" }
 json-boundary = { path = "adapter/json-boundary" }
