--- a/adapter/json-boundary/Cargo.toml
+++ b/adapter/json-boundary/Cargo.toml
@@ -6,7 +6,6 @@ publish = false
 
 [dependencies]
 application = { version = "0.0.0", optional = true }
-domain = { version = "0.0.0", optional = true }
 serde = { version = "1", features =  ["derive"] }
 serde_json = "1"
 http = "*"
@@ -14,4 +13,4 @@ http-serde = "*"
 
 [features]
 default = []
-conversions = ["application", "domain"]
+conversions = ["application"]
