--- a/infrastructure/db/Cargo.toml
+++ b/infrastructure/db/Cargo.toml
@@ -15,3 +15,7 @@ domain = "0.0.0"
 log = "*"
 jfs = "*"
 serde = { version = "1", features = ["derive"] }
+
+[dev-dependencies]
+env_logger = "*"
+tempdir = "*"
