--- a/infrastructure/Cargo.toml
+++ b/infrastructure/Cargo.toml
@@ -17,7 +17,7 @@ mime_guess = "*"
 pretty_env_logger = "*"
 rust-embed = "*"
 serde = { version = "1", features = ["derive"] }
-structopt = { version = "0.3", default-features = false }
+clap = { version = "3", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 warp = "*"
 
