--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -16,15 +16,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
           components: rustfmt, clippy
+
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Cache Dependencies
+        uses: Swatinem/rust-cache@v2
 
       - name: Install trunk
         run: |
