--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ members = [
   "application",
   "domain",
   "infrastructure",
-  "infrastructure/db"
+  "infrastructure/db",
+  "infrastructure/web-server"
 ]
 exclude = [ "webapp" ]
 
@@ -20,12 +21,13 @@ exclude = [ "webapp" ]
 infrastructure = "0.0.0"
 
 [patch.crates-io]
-adapter = { path = "adapter" }
-application = { path = "application" }
-db = { path = "infrastructure/db" }
-domain = { path = "domain" }
-infrastructure = { path = "infrastructure" }
-json-boundary = { path = "adapter/json-boundary" }
+adapter        = { path = "adapter"                   }
+application    = { path = "application"               }
+db             = { path = "infrastructure/db"         }
+domain         = { path = "domain"                    }
+infrastructure = { path = "infrastructure"            }
+json-boundary  = { path = "adapter/json-boundary"     }
+web-server     = { path = "infrastructure/web-server" }
 
 [profile.release]
 lto = true
