--- a/adapter/Cargo.toml
+++ b/adapter/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 # Workspace dependencies
 application = "0.0.0"
 domain = "0.0.0"
-json-boundary = { version = "0.0.0", features = ["conversions"] }
+json-boundary = "0.0.0"
 
 # External dependencies
 http = "*"
