--- a/adapter/Cargo.toml
+++ b/adapter/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "adapter"
+name = "cawr-adapter"
 version = "0.0.0"
 edition = "2021"
 publish = false
 
 [dependencies]
 # Workspace dependencies
-application = "0.0.0"
-domain = "0.0.0"
-json-boundary = "0.0.0"
+cawr-application = "0.0.0"
+cawr-domain = "0.0.0"
+cawr-json-boundary = "0.0.0"
 
 # External dependencies
 http = "*"
