--- a/infrastructure/web-server/Cargo.toml
+++ b/infrastructure/web-server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "web-server"
+name = "cawr-web-server"
 version = "0.0.0"
 edition = "2021"
 publish = false
@@ -7,7 +7,7 @@ publish = false
 [dependencies]
 
 # Workspace dependencies
-adapter = "0.0.0"
+cawr-adapter = "0.0.0"
 
 # External dependencies
 log = "*"
@@ -17,10 +17,14 @@ serde = { version = "1", features = ["derive"] }
 warp = "*"
 
 [dev-dependencies]
+
+# Workspace dependencies
+cawr-application = "0.0.0"
+cawr-db = "0.0.0"
+cawr-domain = "0.0.0"
+
+# External dependencies
 anyhow = "*"
-application = "0.0.0"
-db = "0.0.0"
-domain = "0.0.0"
 hyper = "*"
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
