--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ members = [
   "crates/json-boundary",
   "crates/web-server"
 ]
-exclude = [ "crates/webapp" ]
+exclude = [ "crates/web-app" ]
 
 [dependencies]
 cawr-infrastructure = "0.0.0"
