--- a/crates/web-app-api/Cargo.toml
+++ b/crates/web-app-api/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
 name = "cawr-web-app-api"
-version = "0.0.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 publish = false
 
 [dependencies]
-cawr-json-boundary = { version = "0.0.0", path = "../json-boundary" }
-serde = "1"
-thiserror = "1"
+cawr-json-boundary = { version = "=0.0.0", path = "../json-boundary" }
+serde = "1.0"
+thiserror = "1.0"
 
 [dependencies.gloo-net]
-version = "*"
+version = "0.5"
 default-features = false
 features = ["http", "json"]
