--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -1,21 +1,22 @@
 [package]
 name = "cawr-db"
-version = "0.0.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 publish = false
 
 [dependencies]
 
 # Workspace dependencies
-cawr-adapter = "0.0.0"
-cawr-application = "0.0.0"
-cawr-domain = "0.0.0"
+cawr-adapter = "=0.0.0"
+cawr-application = "=0.0.0"
+cawr-domain = "=0.0.0"
 
 # External dependencies
-log = "*"
-jfs = "*"
-serde = { version = "1", features = ["derive"] }
+log = "0.4"
+jfs = "0.9"
+serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
-env_logger = "*"
-tempdir = "*"
+env_logger = "0.11"
+tempdir = "0.3"
