--- a/crates/domain/Cargo.toml
+++ b/crates/domain/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "cawr-domain"
-version = "0.0.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 publish = false
