--- a/crates/infrastructure/Cargo.toml
+++ b/crates/infrastructure/Cargo.toml
@@ -12,7 +12,7 @@ cawr-adapter = "=0.0.0"
 cawr-cli = "=0.0.0"
 cawr-db = "=0.0.0"
 cawr-desktop = "=0.0.0"
-cawr-web-server = "=0.0.0"
+cawr-web-server-warp = "=0.0.0"
 
 # External dependencies
 anyhow = "1.0"
