--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -15,6 +15,7 @@ cawr-domain = "=0.0.0"
 # External dependencies
 log = "0.4"
 jfs = "0.9"
+parking_lot = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
