--- a/crates/web-app-seed/Cargo.toml
+++ b/crates/web-app-seed/Cargo.toml
@@ -7,7 +7,10 @@ rust-version.workspace = true
 publish = false
 
 [dependencies]
+# Workspace dependencies
 cawr-json-boundary = "=0.0.0"
 cawr-web-app-kern = "=0.0.0"
+
+# External dependencies
 log = "0.4"
 seed = "0.10"
