--- a/crates/web-app-kern/Cargo.toml
+++ b/crates/web-app-kern/Cargo.toml
@@ -8,5 +8,5 @@ rust-version.workspace = true
 [dependencies]
 cawr-json-boundary = "=0.0.0" 
 cawr-web-app-api = "=0.0.0"
-derive_more = "0.99.18"
-gloo-net = { version = "0.5.0", default-features = false }
+derive_more = { version = "1.0.0", features = ["from"] }
+gloo-net = { version = "0.6.0", default-features = false }
